--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>Static Template</title>
+    <title>Math Clash</title>
   </head>
   <body>
     <div id="game-container" class="game-container">
